@@ -23,16 +23,29 @@ public class CustomUserDetailsService implements UserDetailsService {
         User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found with username: " + username));
 
-        String roleName;
-        if (user.getRole() == 2) {
-            roleName = "ROLE_ADMIN";
-        } else { // 1 = USER
-            roleName = "ROLE_USER";
-        }
+//        String roleName;
+//        if (user.getRole() == 2) {
+//            roleName = "ROLE_ADMIN";
+//        } else { // 1 = USER
+//            roleName = "ROLE_USER";
+//        }
+//
+//        List<GrantedAuthority> authorities = Collections.singletonList(
+//                new SimpleGrantedAuthority(roleName)
+//        );
+        List<GrantedAuthority> authorities;
 
-        List<GrantedAuthority> authorities = Collections.singletonList(
-                new SimpleGrantedAuthority(roleName)
-        );
+        if (user.getRole() == 2) {
+            // ADMIN cần cả hai quyền để truy cập các tài nguyên yêu cầu ROLE_USER (nếu có)
+            authorities = List.of(
+                    new SimpleGrantedAuthority("ROLE_ADMIN"),
+                    new SimpleGrantedAuthority("ROLE_USER")
+            );
+        } else { // 1 = USER
+            authorities = Collections.singletonList(
+                    new SimpleGrantedAuthority("ROLE_USER")
+            );
+        }
 
         return new org.springframework.security.core.userdetails.User(
                 user.getUsername(),
